# ML_Ops

./: .gitignore  README.md  pyproject.toml
01_AWS_Boto3_EC2/: 01_aws_ec2_boto3_create_key_pair.py  02_aws_ec2_create_instance.py  03_aws_ec2_create_security_group.py  04_aws_ec2_attach_detach_sec_groups.py  05_aws_ec2_check_instance_status.py  06_aws_ec2_start_stop_terminate_instances.py
02_AWS_Boto3_S3/: 01_aws_s3_create_bucket.py  02_aws_s3_upload_to_bucket.py  03_aws_s3_download_from_bucket.py  04_aws_s3_upload_directory.py  05_aws_s3_download_directory.py  06_aws_s3_delete_files_from_bucket.py  index.html
03_Sentiment_Classification_Using_TinyBERT_Transformer/: 01_load_data_HF_Dataset.py  02_data_tokenization_HF_tinyBERT.py  03_model_evaluation_HF_evaluate.py  04_model_building_and_training_HF_Transformers.py  05_model_inferencing_HF_pipeline.py  06_create_s3_bucket_for_model.py  07_upload_model_on_s3.py
04_Disaster_Tweets_Classification_Using_TinyBERT_Transformer/: _02_tokenizing_disaster_tweets.py  _05_push_model_on_s3.py
04_Disaster_Tweets_Classification_Using_TinyBERT_Transformer.py/: _01_loading_disaster_tweets.py  _03_model_building_and_training.py  _04_model_inferencing.py
05_Human_Pose_Classification_ViT/: _01_loading_preprocessing_dataset.py  _02_image_preprocessing.py  _03_model_evaluation.py
